--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -4,66 +4,126 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:background="@color/app_background"
-              android:layout_height="match_parent"> 
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_height="match_parent"> 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="110dp"
+            android:background="@color/colorWhrite"
             android:gravity="center"
             android:id="@+id/information_layout"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:orientation="horizontal">
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="133dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="45dp"
+                android:layout_width="148dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="36dp"
                 android:layout_marginLeft="18dp"
-                android:layout_marginBottom="10dp"
                 android:orientation="vertical">
-                <TextView
-                    android:id="@+id/text_lastaction1"
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="上次喂食：7小时前"
-                    android:textSize="10sp" />
-                <TextView
-                    android:id="@+id/text_lastaction2"
+                    android:layout_height="17dp"
+                    android:gravity="left"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_marginTop="3dp"
+                        android:id="@+id/image_lastaction1"
+                        android:layout_width="13dp"
+                        android:layout_height="9dp"
+                        android:clickable="false"
+                        android:src="@mipmap/photo_normal" />
+                    <TextView
+                        android:layout_marginLeft="11dp"
+                        android:id="@+id/text_lastaction1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="上次喂食：7小时前"
+                        android:textSize="12sp" />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="上次铲屎：昨天"
-                    android:textSize="10sp" />
-                <TextView
-                    android:id="@+id/text_lastaction3"
+                    android:layout_height="12dp"
+                    android:gravity="left"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_marginTop="3dp"
+                        android:id="@+id/image_lastaction2"
+                        android:layout_width="13dp"
+                        android:layout_height="9dp"
+                        android:clickable="false"
+                        android:src="@mipmap/photo_normal" />
+                    <TextView
+                        android:id="@+id/text_lastaction2"
+                        android:layout_marginLeft="11dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="上次铲屎：昨天"
+                        android:textSize="12sp" />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="上次洗澡：3天前"
-                    android:textSize="10sp" />
+                    android:layout_height="12dp"
+                    android:gravity="left"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/image_lastaction3"
+                        android:layout_marginTop="3dp"
+                        android:layout_width="13dp"
+                        android:layout_height="9dp"
+                        android:clickable="false"
+                        android:src="@mipmap/photo_normal" />
+                    <TextView
+                        android:id="@+id/text_lastaction3"
+                        android:layout_marginLeft="11dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="上次洗澡：3天前"
+                        android:textSize="12sp" />
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_weight="1"
+                android:gravity="top|center"
                 android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/pet_photo"
-                    android:layout_marginLeft="88dp"
-                    android:layout_marginRight="12dp"
-                    android:layout_width="67dp"
-                    android:layout_height="64dp"
-                    android:clickable="false"
-                    android:src="@mipmap/photo_normal" />
-                <ImageButton
-                    android:id="@+id/profile_buttom"
-                    android:layout_width="9dp"
-                    android:layout_height="17dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="3dp"
-                    android:background="#00000000"
-                    android:clickable="false"
-                    android:src="@mipmap/arrayright_normal" />
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="65dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="22dp"
+                    android:gravity="top|center_horizontal"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/pet_photo"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:clickable="false"
+                        android:src="@mipmap/photo_normal" />
+
+                    <TextView
+                        android:id="@+id/pet_nickname_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:text="pet_name"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="58dp"
+                    android:layout_height="match_parent"
+                    android:gravity="right|center_vertical"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/profile_buttom"
+                        android:layout_width="9dp"
+                        android:layout_height="17dp"
+                        android:clickable="false"
+                        android:src="@mipmap/arrayright_normal" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
         <View
@@ -79,7 +139,6 @@
             android:orientation="horizontal">
             <com.petbus.tj.petbus.ui.actionlistview
                 android:id="@+id/list_view"
-                android:dividerHeight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
