--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -2,59 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/app_background"
+    android:background="@color/colorWhrite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="24dp"
-        android:background="@color/app_background"
         android:orientation="horizontal">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="99dp"
-            android:gravity="right"
             android:layout_height="fill_parent"
-            android:background="@color/colorWhrite"
+            android:background="@android:color/transparent"
+            android:gravity="right"
             android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/record_times"
-                style="@style/diary_record_text"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="11:50"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
         </LinearLayout>
+        <View
+            android:layout_marginLeft="9dp"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="@color/app_background" /> 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="239dp"
-            android:gravity="left"
             android:layout_height="fill_parent"
             android:layout_marginLeft="22dp"
-            android:background="@color/colorWhrite"
+            android:background="@android:color/transparent"
+            android:gravity="left"
             android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/recode_actioin_text"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="@string/fead"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="76dp"
-        android:background="@color/app_background"
         android:id="@+id/information_layout"
         android:orientation="horizontal">
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="68dp"
                 android:layout_height="68dp"
-                android:background="#00000000"
-                android:layout_marginBottom ="8dp"
                 android:layout_marginLeft ="19dp"
                 android:id="@+id/pet_list_layout"
                 android:orientation="horizontal">
@@ -64,12 +62,11 @@
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="30dp"
-                    android:maxWidth="30dp"
-                    android:minHeight="30dp"
-                    android:minWidth="30dp"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
                     android:layout_marginTop ="19dp"
-                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="40dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -80,12 +77,11 @@
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="30dp"
-                    android:maxWidth="30dp"
-                    android:minHeight="30dp"
-                    android:minWidth="30dp"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
                     android:layout_marginTop ="19dp"
-                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -96,12 +92,11 @@
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="30dp"
-                    android:maxWidth="30dp"
-                    android:minHeight="30dp"
-                    android:minWidth="30dp"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
                     android:layout_marginTop ="19dp"
-                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="18dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -112,28 +107,38 @@
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="30dp"
-                    android:maxWidth="30dp"
-                    android:minHeight="30dp"
-                    android:minWidth="30dp"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
                     android:layout_marginTop ="19dp"
-                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="7dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/photo_normal" />
             </RelativeLayout>
-            <ImageView
-                android:id="@+id/record_action_icon"
-                android:layout_width="wrap_content"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="45dp"
                 android:layout_height="fill_parent"
-                android:scaleType="center"
-                android:maxHeight="45dp"
-                android:maxWidth="45dp"
-                android:minHeight="45dp"
-                android:minWidth="45dp"
-                android:layout_marginBottom ="18dp"
-                android:src="@mipmap/fade" />
+                android:id="@+id/pet_list_layout"
+                android:orientation="horizontal">
+                    <View
+                        android:layout_marginLeft="21dp"
+                        android:layout_width="1dp"
+                        android:layout_height="fill_parent"
+                        android:background="@color/app_background" /> 
+                    <ImageView
+                        android:id="@+id/record_action_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:scaleType="center"
+                        android:maxHeight="45dp"
+                        android:maxWidth="45dp"
+                        android:minHeight="45dp"
+                        android:minWidth="45dp"
+                        android:layout_marginBottom ="18dp"
+                        android:src="@mipmap/fade" />
+            </RelativeLayout>
             <TextView
                 android:id="@+id/recode_remark_text"
                 android:layout_width="101dp"
@@ -154,5 +159,14 @@
                 android:minHeight="57dp"
                 android:minWidth="85dp"
                 android:src="@mipmap/fade" />
+    </LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="17dp"
+        android:id="@+id/information_layout">
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/app_background" /> 
     </LinearLayout>
 </LinearLayout>
