--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -18,12 +18,12 @@
 
         <TextView
             android:id="@+id/title_text"
+            style="@style/titlebar_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:gravity="center_horizontal"
-            android:text="@string/petdiary"
-            style="@style/titlebar_text" />
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/petdiary" />
         <ImageButton
             android:id="@+id/leftreturn_button"
             android:layout_width="wrap_content"
@@ -36,10 +36,11 @@
             android:src="@mipmap/arrarryleft_normal" />
         <ImageButton
             android:id="@+id/setting_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="14dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="3dp"
+            android:layout_marginTop="21dp"
             android:background="#00000000"
             android:clickable="false"
             android:layout_alignParentRight="true"
@@ -57,9 +58,10 @@
             android:src="@mipmap/add_normal" />
         <ImageButton
             android:id="@+id/overview_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="14dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="21dp"
             android:layout_marginRight="3dp"
             android:background="#00000000"
             android:clickable="false"
