--- a/project/app/src/main/res/layout/record_date.xml
+++ b/project/app/src/main/res/layout/record_date.xml
@@ -20,7 +20,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#aa000000"
+            android:background="#aa808080"
             android:gravity="center" />
         <View
             android:layout_width="match_parent"
@@ -33,27 +33,28 @@
         android:id="@+id/daily_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#aa000000"
         android:layout_gravity="center_horizontal|center"
         android:text="record_1!"
         android:textSize="12sp" />
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="33dp"
-            android:layout_height="match_parent">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#00000000" />
-            <View
-                android:layout_width="wrap_content"
-                android:gravity="center"
-                android:layout_height="2dp"
-                android:background="#aa000000" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#00000000" />
-        </LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="33dp"
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="#00000000" />
+        <View
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_height="2dp"
+            android:background="#aa808080" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="#00000000" />
+    </LinearLayout>
 </LinearLayout>
