--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+    android:background="@color/app_background"
     tools:context=".petbus_profile">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -17,14 +17,13 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/txt_profileTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:clickable="true"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:text="@string/petprofile"
             android:textSize="21sp"
-            android:textColor="@color/colorBlack"
-            android:layout_marginTop="6dp"/>
+            android:textColor="@color/colorBlack" />
         <ImageButton
             android:id="@+id/btn_profileBack"
             android:layout_width="wrap_content"
@@ -56,6 +55,5 @@
         android:divider="@color/app_background"
         android:dividerHeight="13dp"
         android:layout_margin="16dp">
-
     </ListView>
 </LinearLayout>
