--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -14,29 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="@color/colorWhrite"
-        android:gravity="center"
-        android:id="@+id/topbar_lineralayout"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txt_profileaddTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/addpet"
-            android:textSize="21sp"
-            android:textColor="@color/colorBlack" />
+         android:id="@+id/topbar_lineralayout">
 
         <ImageButton
             android:id="@+id/btn_profileaddBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/txt_profileaddTitle"
-            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="19dp"
             android:background="@color/colorWhrite"
             android:clickable="false"
             android:src="@mipmap/arrarryleft_normal" />
+        <TextView
+            android:id="@+id/txt_profileaddTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="@string/addpet"
+            android:textSize="21sp"
+            android:textColor="@color/colorBlack" />
     </RelativeLayout>
     <fragment
         android:layout_width="match_parent"
